multi-res bake broken in 2.60 #29240

Closed
opened 2011-11-13 04:54:33 +01:00 by Morten Mikkelsen · 11 comments

%%%hit bake and be amazed. Worked in 2.59%%%

%%%hit bake and be amazed. Worked in 2.59%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Interesting. Looks like it works fine if you leave sculpt mode and enter object mode and then hit bake.
However, if you hit bake while in sculpt mode it seems to come to a halt and as far as I can tell never finishes.%%%

%%%Interesting. Looks like it works fine if you leave sculpt mode and enter object mode and then hit bake. However, if you hit bake while in sculpt mode it seems to come to a halt and as far as I can tell never finishes.%%%

%%%Multires baking happens from highest subdivision level against level in 3d viewport, so when you're in sculpt mode you're baking from level 5 o level 5. When you leave sculpt mode, you're baking from level 5 to level 0. Maybe that's what making you confused.
Discovered another bug -- crash when baking to level 0 when you're in sculpt mode. Will check it too.%%%

%%%Multires baking happens from highest subdivision level against level in 3d viewport, so when you're in sculpt mode you're baking from level 5 o level 5. When you leave sculpt mode, you're baking from level 5 to level 0. Maybe that's what making you confused. Discovered another bug -- crash when baking to level 0 when you're in sculpt mode. Will check it too.%%%

%%%Crash fixed, but still can't see issues with baker itself. It's just slow because of lvl5->lvl5 baking.%%%

%%%Crash fixed, but still can't see issues with baker itself. It's just slow because of lvl5->lvl5 baking.%%%

%%%Also fixed speed issue in rev41778. Now looks like it've got quite reasonable behavior, but waiting for you to confirm this.%%%

%%%Also fixed speed issue in rev41778. Now looks like it've got quite reasonable behavior, but waiting for you to confirm this.%%%
Author
Member

%%%I remember reporting the bug regarding hitting bake while in sculpt mode back before 2.59 was released and I remember it being fixed
such that you could bake even while in sculpt mode from sculpt level to object mode preview level.
So this sounds like 2.60a has regressed to me?

cheers,

morten%%%

%%%I remember reporting the bug regarding hitting bake while in sculpt mode back before 2.59 was released and I remember it being fixed such that you could bake even while in sculpt mode from sculpt level to object mode preview level. So this sounds like 2.60a has regressed to me? cheers, morten%%%
Author
Member

%%%the way I see it one of two things should happen here. Either baking has to work correctly in sculpt mode such that it can still bake from sculpt level to chosen preview level or the interface must not offer muti-res baking at all while in sculpt mode. What do u think?

Cheers,

Morten%%%

%%%the way I see it one of two things should happen here. Either baking has to work correctly in sculpt mode such that it can still bake from sculpt level to chosen preview level or the interface must not offer muti-res baking at all while in sculpt mode. What do u think? Cheers, Morten%%%

%%%Well, i think it's better to switch it to using preview level rather than disabling baking.%%%

%%%Well, i think it's better to switch it to using preview level rather than disabling baking.%%%
Author
Member

%%%this would certainly be my preference too :)%%%

%%%this would certainly be my preference too :)%%%

%%%Fixed this in svn r41806. Think now this report can be closed.%%%

%%%Fixed this in svn r41806. Think now this report can be closed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29240
No description provided.