Fix #29240: multi-res bake broken in 2.60

Use preview subdivision level even when in sculpt mode. Makes more sense
than baking against sculpting subdivision level.